<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kobuki_documentation</name>
  <version>1.0.2</version>
  <description>
    Kobuki Documentation
  </description>

  <author>Daniel Stonier</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">https://kobuki.readthedocs.io/en/release-1.0.x//</url>
  <url type="repository">https://github.com/stonier/py_trees_ros</url>
  <url type="bugtracker">https://github.com/stonier/py_trees_ros/issues</url>

  <build_depend>python3-setuptools</build_depend>

  <test_depend>python3-pytest</test_depend>

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python3-sphinx-rtd-theme</doc_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
